--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+
+<Button android:id="@+id/ButtonStartService" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Start Service"></Button>
+<Button android:id="@+id/ButtonSelectGpsLog" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Select GPS Log file"></Button>
+<Button android:id="@+id/ButtonPlay" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Play GPS Log"></Button>
+<Button android:id="@+id/ButtonPause" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Pause"></Button>
+<Button android:id="@+id/ButtonStop" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Stop"></Button>
+<Button android:id="@+id/ButtonStopService" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Stop Service"></Button>
 </LinearLayout>
