--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,9 +6,21 @@
     >
 
 <Button android:id="@+id/ButtonStartService" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Start Service"></Button>
-<Button android:id="@+id/ButtonSelectGpsLog" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Select GPS Log file"></Button>
+<Button android:id="@+id/ButtonEnableProvider" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Enable DummyProvider"></Button>
+<TableLayout android:id="@+id/TableLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content"
+android:stretchColumns="1"
+android:shrinkColumns="1">
+<TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+<Button android:id="@+id/ButtonAvailable" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Available"></Button>
+<Button android:id="@+id/ButtonOutOfService" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="OutOfService"></Button>
+<Button android:id="@+id/ButtonTemporalyUnavailable" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Unavailable"></Button>
+</TableRow>
+</TableLayout>
 <Button android:id="@+id/ButtonPlay" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Play GPS Log"></Button>
 <Button android:id="@+id/ButtonPause" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Pause"></Button>
 <Button android:id="@+id/ButtonStop" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Stop"></Button>
+<Button android:id="@+id/ButtonDisableProvider" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Disable DummyProvider"></Button>
 <Button android:id="@+id/ButtonStopService" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="Stop Service"></Button>
 </LinearLayout>
