CSV 形式のログ再生に対応した。

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -4,4 +4,8 @@
     <item>gps</item>
     <item>network</item>
   </string-array>
+  <string-array name="courses">
+    <item>example.gpx</item>
+    <item>20121211.gqlog</item>
+  </string-array>
 </resources>
