Add some gpx files

--- a/gpsfaker/res/values/arrays.xml
+++ b/gpsfaker/res/values/arrays.xml
@@ -8,5 +8,9 @@
     <item>example.gpx</item>
     <item>20121211.gqlog</item>
     <item>20121217.gqlog</item>
+    <item>chiba.gpx</item>
+    <item>kasugai_toyota.gpx</item>
+    <item>nagasaki.gpx</item>
+    <item>shiga.gpx</item>
     </string-array>
 </resources>
