Add mt.fuji gpx

--- a/gpsfaker/res/values/arrays.xml
+++ b/gpsfaker/res/values/arrays.xml
@@ -12,5 +12,6 @@
     <item>kasugai_toyota.gpx</item>
     <item>nagasaki.gpx</item>
     <item>shiga.gpx</item>
+    <item>mt_fuji.gpx</item>
     </string-array>
 </resources>
